--- a/style.css
+++ b/style.css
@@ -18,9 +18,6 @@ html, body{
   --lowcontrast:#ff5470;
   --complementary: #fde24f;
 }
-.col-6{
-  margin-right: 20px;
-}
 .glass{
   /* From https://css.glass */
   background:  rgba(251, 252, 252, 0.75);
@@ -46,45 +43,34 @@ html, body{
 .checkbox-group{
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  width: 100%;
 }
-label{
-  display: block;
+.group-row{
+  display: flex;
+  flex-direction: row-reverse;
   position: relative;
-  align-content: flex-start;
-  align-self: flex-start;
-  margin-left: 20px;
+  align-items: center;
+  padding-top: 5px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  padding-left: 35px;
-  padding-bottom: 20px;
   cursor: pointer;
   font-weight: 500;
 }
-label:first-child{
-  margin-top:20px;
-}
 input[type='checkbox']{
-  position: absolute;
   opacity: 0;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  height: 25px;
-  width: 25px;
 }
 .checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
+  margin-left: 10px;
   height: 25px;
   width: 25px;
   border-radius: 50%;
   background-color: var(--lowcontrast);
 }
-label:hover{
+.group-row:hover{
   font-weight: 700;
 }
 .checkmark.hover{
@@ -99,26 +85,23 @@ label.checked{
   text-decoration-style: double;
 }
 .pencil{
-  padding-left: 40px;
+  margin-left: 10px;
   height: 15px;
 }
 
 .pencil:hover{
   height: 20px;
 }
-
-.list-container{
-  z-index: 1 !important;
-  
-}
-.list{
- list-style-type: none;
-}
-li{
-  margin: 10px;
-}
 .dropdown-item:hover{
   background-color: transparent !important;
+  font-weight: 700;
+}
+.add-project{
+  background-color: transparent !important;
+  border: none;
+  outline: none !important;
+}
+.add-project:hover{
   font-weight: 700;
 }
 .btn-dropdown{
