Changed the vision of the project
I realized that I was making spaghetti code so I just will make it simpler to do something that works. In the future ill make the full Project.

--- a/style.css
+++ b/style.css
@@ -28,17 +28,15 @@ body {
   -webkit-backdrop-filter: blur(12.2px);
   border: 1px solid rgba(251, 252, 252, 0.3);
 }
-.dropdown {
+.title {
   margin-bottom: 10px;
-  z-index: 10;
+  font-size: 20px;
 }
-.dropdown-menu {
-  background-color: rgba(255, 84, 112, 0.75) !important;
-  border-radius: 16px !important;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1) !important;
-  backdrop-filter: blur(6.7px) !important;
-  -webkit-backdrop-filter: blur(6.7px) !important;
-  border: 1px solid rgba(255, 84, 112, 0.59) !important;
+
+.item-box {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 .checkbox-group {
   display: flex;
@@ -89,19 +87,6 @@ label.checked {
   height: 20px;
   cursor: pointer;
 }
-.dropdown-item:hover {
-  background-color: transparent !important;
-  font-weight: 700;
-}
-.add-project {
-  padding-left: 24px;
-  background-color: transparent !important;
-  border: none;
-  outline: none !important;
-}
-.add-project:hover {
-  font-weight: 700;
-}
 .btn-dropdown {
   outline: none !important;
   border: none;
@@ -139,7 +124,8 @@ label.checked {
   background-color: transparent;
   border-color:rgba(0, 0, 0, 0.1);
   border-radius: 24px;
-  width: 20.3em;
+  width: 90%;
+  outline-color: var(--black);
 }
 .dismiss {
   margin-right: 5px;
